--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
  
    <footer class="footer">
 
-    <p><small>&copy; Copyright  <a href="http://atelierbramdehaan.nl">Bram de Haan</a> 2012 - 2013 <a href="http://atelierbram.mit-license.org/">Released under MIT Licence</a></small></p> 
+    <p><small>&copy; Copyright  <a href="http://atelierbramdehaan.nl">Bram de Haan</a> 2012 - 2013 <a href="http://atelierbram.mit-license.org/">Released under MIT Licence</a></small>
+<small><a href="https://github.com/atelierbram/houtje-touwtje">Fork this on Github</a></small></p>
   </footer>
 
 
