--- a/lab/index.html
+++ b/lab/index.html
@@ -1,49 +1,7 @@
-<!doctype html><!-- HTML5 Reset: https://github.com/murtaugh/HTML5-Reset Free to use --><!--[if lt IE 7 ]><html class="ie ie6 ie-lt10 ie-lt9 ie-lt8 ie-lt7 no-js" lang="en"><![endif]--><!--[if IE 7 ]><html class="ie ie7 ie-lt10 ie-lt9 ie-lt8 no-js" lang="en"><![endif]--><!--[if IE 8 ]><html class="ie ie8 ie-lt10 ie-lt9 no-js" lang="en"> <![endif]--><!--[if IE 9 ]><html class="ie ie9 ie-lt10 no-js" lang="en"> <![endif]--><!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]--><!-- the "no-js" class is for Modernizr or Buoy http://cferdinandi.github.io/buoy/ . --><head id="Sitename"><meta charset="utf-8"><!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame --><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Sitename | Lab Page Title></title><meta name="title" content="Lab Page Title" /><meta name="description" content="Lab page description" /><meta name="author" content="Firstname Lastname" /><!-- Google will often use this as its description of your page/site. Make it good. --><meta name="google-site-verification" content="" /><!-- Speaking of Google, don't forget to set your site up: http://google.com/webmasters --><meta name="Copyright" content="Organisation Name" /><!--  Mobile Viewport Fix http://j.mp/mobileviewport & http://davidbcalhoun.com/2010/viewport-metatag device-width : Occupy full width of the screen in its current orientation initial-scale = 1.0 retains dimensions instead of zooming out if page height >device height maximum-scale = 1.0 retains dimensions instead of zooming in if page width< device width --><!-- Uncomment to use; use thoughtfully!<meta name="viewport" content="width=device-width, initial-scale=1.0" />--><!-- Iconifier might be helpful for generating favicons and touch icons: http://iconifier.net --><link rel="shortcut icon" href="http://atelierbram.github.io/houtje-touwtje/assets/img/ui/favicon.ico" type="image/x-icon" /><!-- This is the traditional favicon.  - size: 16x16 or 32x32 - transparency is OK --><link rel="apple-touch-icon" href="http://atelierbram.github.io/houtje-touwtje/assets/img/ui/apple-touch-icon.png" /><!-- The is the icon for iOS's Web Clip and other things.  - size: 57x57 for older iPhones, 72x72 for iPads, 114x114 for retina display (IMHO, just go ahead and use the biggest one) - To prevent iOS from applying its styles to the icon name it thusly: apple-touch-icon-precomposed.png - Transparency is not recommended (iOS will put a black BG behind the icon) --><!-- concatenate and minify for production --><link rel="stylesheet" href="http://atelierbram.github.io/houtje-touwtje/assets/css/style.css" /><!-- Lea Verou's Prefix Free, lets you use only un-prefixed properties in yuor CSS files --><!--<script src="<?php// echo $rootUrl ?>/assets/js/prefixfree.min.js"></script>--><!-- This is an un-minified, complete version of Modernizr.
-     Before you move to production, you should generate a custom build that only has the detects you need. --><!--<script src="<?php// echo $rootUrl ?>/assets/js/modernizr-2.7.0.dev.js"></script>--><!-- Application-specific meta tags --><!-- Windows 8 --><meta name="application-name" content="" /><meta name="msapplication-TileColor" content="" /><meta name="msapplication-TileImage" content="" /><!-- Twitter --><meta name="twitter:card" content=""><meta name="twitter:site" content=""><meta name="twitter:title" content=""><meta name="twitter:description" content=""><meta name="twitter:url" content=""><!-- Facebook --><meta property="og:title" content="" /><meta property="og:description" content="" /><meta property="og:url" content="" /><meta property="og:image" content="" /><!-- http://gomakethings.com/ditching-jquery-for-vanilla-js/ --><script>if ( 'querySelector' in document && 'addEventListener' in window && Array.prototype.forEach ) { document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js '; }</script></head><body class="index"><div class="lab wrapper"><!-- not needed? up to you: http://camendesign.com/code/developpeurs_sans_frontieres --><header class="header"><h1><a href="http://atelierbram.github.io/houtje-touwtjelab">Lab Page Title</a></h1></header><nav class="main-navigation nav"><ul class="nav-list"><li class="nav-item"><a href="http://atelierbram.github.io/houtje-touwtje" class="nav-link nav-link--home" data-tooltip="home">home</a></li><li id="nav-item--lab" class="nav-item nav-item--current"><a href="http://atelierbram.github.io/houtje-touwtje/lab/" class="nav-link nav-link--lab" data-tooltip="lab">lab</a></li><li class="nav-item"><a href="http://atelierbram.github.io/houtje-touwtje/about/" class="nav-link nav-link--about" data-tooltip="about">about</a></li><li class="nav-item"><a href="http://atelierbram.github.io/houtje-touwtje/contact/" class="nav-link nav-link--contact" data-tooltip="contact">contact</a></li></ul></nav>
-  <article class="article">
-
-    <h1>Article Header</h1>
-
-    <p>Etiam pretium odio eu mi convallis vitae varius neque pharetra. Nulla vestibulum nisi ut sem cursus sed mattis nisi egestas.</p>
-
-    <h2>Article Subhead</h2>
-
-    <p>Vestibulum lacus erat, volutpat vel dignissim at, fringilla ut felis.</p>
-
-  </article>
-
-<aside class="sidebar"><h2>Sidebar Content</h2><ul><li>item 1</li><li>item 2</li><li>item 3</li><li>item 4</li><li>item 5</li></ul></aside>
- <footer class="footer"><p><small>&copy; Copyright<a href="http://atelierbramdehaan.nl">Bram de Haan</a>2012 - 2013<a href="http://atelierbram.mit-license.org/">Released under MIT Licence</a></small><small><a href="https://github.com/atelierbram/houtje-touwtje">Fork this on Github</a></small></p></footer> 
-
-</div><!-- ./wrapper -->
-
-<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-     http://chromium.org/developers/how-tos/chrome-frame-getting-started -->
-<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-
-<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
-<!-- <script>window.jQuery || document.write("<script src='assets/js/jquery-1.10.2.min.js'>\x3C/script>")</script> -->
-
-<!-- this is where we put our custom functions -->
-<!-- don't forget to concatenate and minify if needed -->
-<!-- <script src="assets/js/functions.js"></script> -->
-
- 
-<!-- Asynchronous google analytics; this is the official snippet.  Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
-
-<script>
-
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-XXXXXX-XX']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script> -->
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<html><head>
+<title>404 Not Found</title>
+</head><body>
+<h1>Not Found</h1>
+<p>The requested URL /~bram/php/houtje-touwtje/php/lab/index.php was not found on this server.</p>
+</body></html>
